more concise description

--- a/Shared (App)/Base.lproj/Main.html
+++ b/Shared (App)/Base.lproj/Main.html
@@ -12,7 +12,7 @@
 <body>
     <img class="platform-mac app-icon" src="../Icon.png" alt='"No Distractions" for YouTube Icon'>
     
-    <p>This Safari extension lets you hide distractions on YouTube (if you need it on more sites, try <a href="https://apps.apple.com/gb/app/mindshield/id1660218371">MindShield</a>). The extension is open source and collects zero data - you can see the source code on <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube"> GitHub</a>. </p>
+    <p>This Safari extension lets you hide distractions on YouTube (for <i>any</i> website, use <a href="https://apps.apple.com/gb/app/mindshield/id1660218371">MindShield</a>). <br/>The extension is open source and collects zero data - you can find the source code on <a href="https://github.com/ulyngs/open-source-no-distractions-for-youtube"> GitHub</a>. </p>
     <p class="platform-ios platform-iphone">To turn it on, open Safari and go to youtube.com. Then:<br>
     1) In the toolbar tap 'Aa' -> 'Manage Extensions', and toggle the extension on.<br>
     2) Tap the extension and allow it to access youtube.com
