add error handling

--- a/Shared (Extension)/Resources/popup.html
+++ b/Shared (Extension)/Resources/popup.html
@@ -6,6 +6,11 @@
     <script type="module" src="popup.js"></script>
 </head>
 <body>
+    <!-- Error Prompt -->
+    <div id="error-prompt">
+        <p style="font-style: italic;">"No Distractions" for YouTube needs to initialise. <br/><a href="https://support.apple.com/en-us/109359#iphone-x">Close Safari fully</a> and open it again.</p>
+    </div>
+    
     <!-- Review Prompt -->
     <div id="reviewPrompt" style="display: none;">
         <div class="review-prompt-content">
